<resources>
    <string name="app_name">ChatBot</string>
    <string name="hint_message">Nhập tin nhắn…</string>
    <string name="send">Gửi</string>
    <string name="voice_input">Nói</string>
    <string name="mic_permission_required">Cần quyền micro để nhận diện giọng nói.</string>
    <string name="speech_not_supported">Thiết bị không hỗ trợ nhận diện giọng nói.</string>
    <string name="error_empty_message">Vui lòng nhập nội dung.</string>
    <string name="chat_role_user">Bạn</string>
    <string name="chat_role_assistant">Trợ lý</string>
    <string name="chat_retry">Thử lại</string>
    <string name="chat_new_thread">Cuộc chat mới</string>
    <string name="chat_recent_threads">Cuộc chat gần đây</string>
    <string name="chat_drawer_hint">Chọn một cuộc để tiếp tục.</string>
    <string name="theme_dark_mode">Chế độ tối</string>
    <string name="nav_drawer_open">Mở danh sách chat</string>
    <string name="nav_drawer_close">Đóng danh sách chat</string>
    <string name="chat_copy_code">Sao chép</string>
    <string name="chat_code_copied">Đã sao chép vào bảng nhớ</string>
</resources>